api-manager/4.0.0/deploy-and-publish/deploy-on-gateway/choreo-connect/getting-started/deploy/cc-deploy-overview.md
---
title: "Choreo connect deployment options"
description: "Compare the Docker Compose and Kubernetes options for deploying Choreo Connect as a standalone or control-plane-connected Gateway."
canonical_url: https://wso2.com/api-platform/docs/api-manager/4.0.0/deploy-and-publish/deploy-on-gateway/choreo-connect/getting-started/deploy/cc-deploy-overview/
md_url: https://wso2.com/api-platform/docs/api-manager/4.0.0/deploy-and-publish/deploy-on-gateway/choreo-connect/getting-started/deploy/cc-deploy-overview.md
tags:
  - api-manager
  - deploy-and-publish
  - deploy-on-gateway
  - choreo-connect
author: WSO2 API Platform Documentation Team
last_updated: 2026-08-20
content_type: "concept"
---

# Choreo Connect Deployment Options

Choreo Connect is a specialized form of WSO2 API Gateway, and is a lightweight Gateway distribution that can be used to deploy a single API or multiple APIs. You can deploy Choreo Connect using one of the following options.

<table>
    <tr>
        <td width="50%">
            <p>Choreo Connect deployed on Docker Compose</p>
        </td>
        <td width="50%">
            <ul>
                <li>
                    <p>With WSO2 API Manager as a Control Plane</p>
                </li>
                <li>
                    <p>As a Standalone Gateway</p>
                </li>
            </ul>
        </td>
    </tr>
    <tr>
        <td width="50%">
            <p>Choreo Connect deployed on Kubernetes - Helm Artifacts</p>
        </td>
        <td width="50%">
            <ul>
                <li>
                    <p>With WSO2 API Manager as a Control Plane</p>
                </li>
                <li>
                    <p>As a Standalone Gateway</p>
                </li>
            </ul>
        </td>
    </tr>
    <tr>
        <td width="50%">
            <p>Choreo Connect deployed on Kubernetes - YAML Artifacts</p>
        </td>
        <td width="50%">
            <ul>
                <li>
                    <p>With WSO2 API Manager as a Control Plane</p>
                </li>
                <li>
                    <p>As a Standalone Gateway</p>
                </li>
            </ul>
        </td>
    </tr>
</table>

In the following Choreo Connect deployment guides let's see how a service can be securely proxied via Choreo Connect.

Try out the following Choreo Connect deployment guides based on your Choreo Connect deployment.

<table>
    <tr>
        <td width="40%">
            <img src="../../../../../../assets/img/deploy/mgw/docker-logo.png" width="80%" alt="Choreo Connect on Docker Compose">
        </td>
        <td width="60%">
            <ul>
                <li>
                    <a
                        href="../cc-on-docker-with-apim-as-control-plane.md">
                        Choreo Connect on Docker Compose With WSO2 API Manager as a Control Plane</a>
                </li>
                <li>
                    <a
                        href="../cc-as-a-standalone-gateway-on-docker.md">WSO2
                        Choreo Connect as a standalone gateway deployed on Docker Compose</a>
                </li>
            </ul>
        </td>
    </tr>
    <tr>
        <td width="40%">
            <img src="../../../../../../assets/img/deploy/mgw/helm.png" width="80%"
                alt="Choreo Connect on Kubernetes - Helm Artifacts">
        </td>
        <td width="60%">
            <ul>
                <li>
                    <a
                        href="../cc-on-kubernetes-with-apim-as-control-plane-helm-artifacts.md">
                        Choreo Connect on Kubernetes with WSO2 API Manager as a Control Plane</a>
                </li>
                <li>
                    <a
                        href="../cc-as-a-standalone-gateway-on-kubernetes-helm-artifacts.md">
                        Choreo Connect as a standalone gateway deployed on Kubernetes</a>
                </li>
            </ul>
        </td>
    </tr>
    <tr>
        <td width="40%">
            <img src="../../../../../../assets/img/deploy/mgw/kubernetes.png" width="80%"
                alt="Choreo Connect on Kubernetes - YAML Artifacts">
        </td>
        <td width="60%">
            <ul>
                <li>
                    <a
                        href="../cc-on-kubernetes-with-apim-as-control-plane.md">
                        Choreo Connect on Kubernetes with WSO2 API Manager as a Control Plane</a>
                </li>
                <li>
                    <a
                        href="../cc-as-a-standalone-gateway-on-kubernetes.md">
                        Choreo Connect as a standalone gateway deployed on Kubernetes</a>
                </li>
            </ul>
        </td>
    </tr>
</table>